# AdaptiveControl

./: .gitignore  AdaptiveControl.cbp  AdaptiveControl.cpp  AdaptiveControl.h  AdaptiveControl.kdev4  CMakeLists.txt  Math.cpp  clean  main.cpp  pid.f.config  pid.g.config  pid.h.config
.kdev4/: AdaptiveControl.kdev4
lib/: AdaptiveController.cpp  AdaptiveController.h  CMakeLists.txt  Controller.h  Math.cpp  Math.h  NeuralNetwork.cpp  NeuralNetwork.h  Node.cpp  Node.h  PIDcontroller.cpp  PIDcontroller.h  Robot.cpp  Robot.h
src/: AdaptiveControl.cpp  AdaptiveControl.h  CMakeLists.txt  linetrackerwidget.cpp  linetrackerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
