INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
set(SOURCES mainwindow.cpp main.cpp)
set(HEADERS mainwindow.h)
qt4_wrap_ui(OUT_UI mainwindow.ui)
qt4_wrap_cpp(OUT_MOC mainwindow.h)
add_executable(AdaptiveControlGUI ${SOURCES} ${OUT_UI} ${OUT_MOC})
target_link_libraries(AdaptiveControlGUI AdaptiveControl ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
