INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
set(SOURCES mainwindow.cpp main.cpp linetrackerwidget.cpp)
set(HEADERS mainwindow.h linetrackerwidget.h)
qt4_wrap_ui(OUT_UI mainwindow.ui)
qt4_wrap_cpp(OUT_MOC ${HEADERS})
add_executable(AdaptiveControlGUI ${SOURCES} ${OUT_UI} ${OUT_MOC})
target_link_libraries(AdaptiveControlGUI AdaptiveControl ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
